# mix-ml

./: .gitignore  Caddyfile  DECISIONS.md  README.md  compose.build.yaml  compose.yaml  generate_seed_sql.py  report_amount_anomalies.txt  report_ingredient_clusters.txt  report_ingredient_frequency.csv  report_summary.md  report_unit_inventory.csv  seed.sql  taxonomy_classes.csv
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  queries.py
backend/app/routers/: bottles.py  classes.py  cocktails.py  flavor.py  health.py  recipes.py
backend/app/services/: feasibility.py  flavor.py  inventory.py  optimizer.py  shopping_optimizer.py  substitution.py
backend/tests/: conftest.py  test_bottles.py  test_classes.py  test_cocktails.py  test_flavor.py  test_health.py  test_optimizer.py  test_recipes.py  test_shopping.py  test_substitution.py
frontend/: Dockerfile  README.md  pyproject.toml
frontend/app/: client.py  config.py  main.py  templating.py
frontend/app/routers/: detail.py  health.py  home.py  inventory.py  shopping.py  substitutions.py
frontend/app/services/: flavor_matrix_builder.py  flavor_matrix_renderer.py
frontend/app/templates/: _404.html  _bottle_card.html  _bottle_card_expanded.html  _cluster_card.html  _cocktail_card.html  _cocktail_detail_content.html  _cocktail_list.html  _empty_state.html  _flavor_map_content.html  _ingredient_block.html  _ingredient_row.html  (+15 more)
frontend/tests/: __init__.py  test_detail.py  test_flavor_map.py  test_home.py  test_inventory.py  test_shopping.py  test_substitutions.py
(+61 files in other folders)
