[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mix-ml-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "ortools>=9.7,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "httpx>=0.27,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
