[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mix-ml-frontend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "jinja2>=3.1,<4",
    "httpx>=0.27,<1",
    "pydantic-settings>=2.6,<3",
    "python-multipart>=0.0.7",
    "numpy>=2.0,<3",
    "scipy>=1.14,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "httpx>=0.27,<1",
    "respx>=0.22,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
